@@ -1,5 +1,5 @@
 /*
- *    Copyright 2018-2022 the original author or authors.
+ *    Copyright 2018-2026 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -19,7 +19,6 @@ import java.io.Reader;
 import java.sql.Connection;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -313,7 +312,7 @@ class OneWayMapperTest {
       OneWayPersonMapper.Conditions conditions1 = new OneWayPersonMapper.Conditions();
       conditions1.setMails(Arrays.asList("mybatis1.main@test.net", "mybatis2.sub@test.net"));
       OneWayPersonMapper.Conditions conditions2 = new OneWayPersonMapper.Conditions();
-      conditions2.setMails(Collections.singletonList("mybatis1.sub@test.net"));
+      conditions2.setMails(List.of("mybatis1.sub@test.net"));
       List<Mail> mails = mapper.selectMailsByConditionsArray(Arrays.asList(conditions1, conditions2));
       Assertions.assertEquals(3, mails.size());
       {
